<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="dev.vladimir.home.presintation.HomeFragment"
        android:label="@string/nav_graph_home_label"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/searchFragment"
        android:name="dev.vladimir.search.presentation.SearchFragment"
        android:label="@string/nav_graph_search_label"
        tools:layout="@layout/fragment_search"/>
    <fragment
        android:id="@+id/profileFragment"
        android:name="dev.vladimir.profile.presentation.presentation.ProfileFragment"
        android:label="@string/nav_graph_profile_label"
        tools:layout="@layout/fragment_profile">
    </fragment>
    <fragment
        android:id="@+id/authFragment"
        android:name="dev.vladimir.auth.presentation.AuthFragment"
        android:label="@string/nav_graph_auth_label"
        tools:layout="@layout/fragment_auth">
        <deepLink app:uri="@string/navigate_to_auth" />
    </fragment>
    <fragment
        android:id="@+id/mediaDetailsFragment"
        android:name="dev.vladimir.details.presentation.MediaDetailsFragment"
        android:label="@string/nav_graph_media_details_label"
        tools:layout="@layout/fragment_media_details">
        <argument android:name="media_id"/>
        <argument android:name="media_type"/>
        <deepLink app:uri="@string/navigate_to_media_details" />
    </fragment>

</navigation>